--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,22 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+*.iml
+
+.idea/
+
+*.ipr
+*.iws
+
+/out/
+
+.idea_modules/
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+$RECYCLE.BIN/
+
+/logs
